preventing horizontal scroll

--- a/christmas-2024/css/main.css
+++ b/christmas-2024/css/main.css
@@ -8,6 +8,8 @@ body {
 	background-color: black;
 	color: white;
 	letter-spacing: 1.5px;
+	overflow-x: hidden;
+	max-width: 100vw;
 }
 
 .show {
